# tichu-essentials

./: .gitignore  README.md
tichu_python/: Tichu-Example.ipynb  ideas.txt  playground.ipynb
tichu_python/exch_model/: data_loader.py  model.py  start_training.py  trainer.py
tichu_python/hand_strength_model/: data_loader.py  model.py  start_training.py  trainer.py
tichu_rust/: Cargo.toml  binary_format_round  bitboard_enumeration  log.txt  log_small.txt
tichu_rust/analysis_resuts/: bomb_stats.txt  bomb_stats_filtered.txt  exchange_stats.txt  exchange_stats_filtered.txt  general_stats.txt  general_stats_filtered.txt  general_stats_r0.txt  general_stats_r0_filtered.txt  gt_call_rates_exact.txt  parsing_stats.txt  parsing_stats_filtered.txt  plot_exch_cards.py  plot_straight_prob_distributions.py  post_intro_bombs.txt  print_hand_category_tables.py  street4_becomes_street5.txt  street4_becomes_street5_filtered.txt  street_stats.txt  street_stats_filtered.txt
tichu_rust/src/: bsw_binary_format.rs  bsw_database.rs  countable_properties.rs  enumerate_hands.rs  enumeration_results.rs  export_to_python.rs  main.rs  pair_street_detection_trick.rs  street_detection_tricks.rs  tichu_hand.rs
tichu_rust/src/analysis/: bomb_stats.rs  exchange_stats.rs  first_8_transition_probability.rs  general_stats.rs  gt_stats.rs  mod.rs  parsing_stats.rs  street_stats.rs
tichu_rust/src/bsw_binary_format/: binary_format_constants.rs  game.rs  mod.rs  player_round_hand.rs  round.rs  round_log.rs  trick.rs
tichulog_csv/: create_tables.txt
