[package]
name = "tichu_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "tichu_rustipy"
crate-type=["cdylib"]
path = "src/export_to_python.rs"

[dependencies]
phf = { version = "0.11", features = ["macros"] }
colored = "2.1.0"
generic-array = "1.1.1"
bitcode = "0.6.3"
memmap2 = "0.9.5"
datasize = "0.2.15"
pyo3  = { version = "0.23.3", features = ["extension-module"] }
[profile.release]
lto = true
panic = "abort"